og and twitter cards

--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
+
+	<meta property="og:type" content="website">
+	<meta property="og:locale" content="es_ES">
+	<meta property="og:title" content="Pong Retro Game - Juega Ahora">
+	<meta property="og:description" content="Cero descargas. Cien por ciento nostalgia. ¡Haz clic y juega ya!">
+	<meta property="og:image" content="https://angeldavidhurtado.github.io/pong/assets/img/social-media-banner.png">
+	<meta property="og:url" content="https://angeldavidhurtado.github.io/pong/">
+	<meta property="og:site_name" content="Pong Retro Game - Juega Ahora">
+
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Pong Retro Game - Juega Ahora">
+	<meta name="twitter:description" content="Cero descargas. Cien por ciento nostalgia. ¡Haz clic y juega ya!">
+	<meta name="twitter:image" content="https://angeldavidhurtado.github.io/pong/assets/img/social-media-banner.png">
+	<meta name="twitter:creator" content="@angeldhurtado">
+	<meta name="twitter:site" content="@angeldhurtado">
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
