--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap">
+	<link rel="stylesheet" href="style.css">
+
+	<title>Pong Retro Game - Juega Ahora</title>
+	<link rel="icon" type="image/x-icon" href="https://angeldavidhurtado.github.io/favicon.ico">
+	<meta name="title" content="Pong Retro Game - Juega Ahora">
+	<meta name="image" content="https://angeldavidhurtado.github.io/pong/assets/img/social-media-banner.png">
+	<meta name="description" content="Cero descargas. Cien por ciento nostalgia. ¡Haz clic y juega ya!">
+	<meta name="application-name" content="Pong Retro Game - Juega Ahora" />
 	<meta name="author" content="Ángel David Hurtado">
 	<meta name="keywords" content="Pong, juego retro, JavaScript, Canvas, videojuego clásico, proyecto JavaScript, HTML5, desarrollo web, juegos en JavaScript, Ángel David Hurtado">
-	<meta name="description" content="¿Te gustan los juegos retro? Revive el clásico Pong con esta versión hecha desde cero en JavaScript y Canvas. Rápido, simple y listo para jugar. ¡Haz clic y juégalo ahora!">
-	<link rel="stylesheet" href="style.css">
-	<title>Pong</title>
 </head>
 <body>
+	<h1 style="display: none">Pong Retro Game - Juega Ahora</h1>
 	<canvas id="$game"></canvas>
 	<script type="module" src="./src/main.js"></script>
 </body>
