--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" href="style.css">
 
 	<title>Pong Retro Game - Juega Ahora</title>
-	<link rel="icon" type="image/x-icon" href="https://angeldavidhurtado.github.io/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="https://angeldavidhurtado.github.io/pong/favicon.ico">
 	<meta name="title" content="Pong Retro Game - Juega Ahora">
 	<meta name="image" content="https://angeldavidhurtado.github.io/pong/assets/img/social-media-banner.png">
 	<meta name="description" content="Cero descargas. Cien por ciento nostalgia. ¡Haz clic y juega ya!">
