meta viewport and touch control

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 	<meta name="application-name" content="Pong Retro Game - Juega Ahora" />
 	<meta name="author" content="Ángel David Hurtado">
 	<meta name="keywords" content="Pong, juego retro, JavaScript, Canvas, videojuego clásico, proyecto JavaScript, HTML5, desarrollo web, juegos en JavaScript, Ángel David Hurtado">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 </head>
 <body>
 	<h1 style="display: none">Pong Retro Game - Juega Ahora</h1>
