--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 	<h1 style="display: none">Pong Retro Game - Juega Ahora</h1>
-	<canvas id="$game"></canvas>
+	<canvas id="$game" style="cursor: none"></canvas>
 	<script type="module" src="./src/main.js"></script>
 </body>
 </html>
